--- a/styles.css
+++ b/styles.css
@@ -12,10 +12,14 @@
 
 .title {
   background: #2165b6; 
+  background: linear-gradient(rgba(33, 101, 182,0.95), rgba(33, 101, 182,0.3)),url('img/background.png') !important;  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(rgba(33, 101, 182,0.95), rgba(33, 101, 182, 0.3)), url('img/background.png') !important; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background-repeat: no-repeat;
+  background-size: contain;
   color: white; 
   padding: 10px; 
   font-weight: 450;
-  min-height: 200px;
+  min-height: 220px;
 }
 
 .text_block {
