change primary color back to blueish

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,7 +1,7 @@
 /*-- scss:defaults --*/
 
 $body-bg:    #fff;
-$primary:    #88398a;
+$primary:    #2165b6;
 $countdown-bg: rgba($primary, .2);
 $countdown-color: #5d5d76;
 $banner-img: './img/banner-img.jpg';
