--- a/program/speakers/speakers.ejs
+++ b/program/speakers/speakers.ejs
@@ -6,7 +6,44 @@
 							<li><a href="<%- item.href %>" target="_blank" class=""><img width="200" height="200" style="border-radius: 40%;" class="" src="<%- item.thumbnail %>" alt="<%= item.name %> picture" /></a>
 							
 							<p><strong> <%= item.name %> </strong> <br/>
-						  	<%= item.affiliation %>
+						  	<%= item.affiliation %> <br/>
+						  	<ul>
+						  	
+						  	<% for (const tile of item.social) { %>
+						  	  <li class="socialIcons">
+						  	  <% if (tile.website) { %> 
+                      <a class="" href="<%- tile.website %>" >
+                        <i class="bi bi-globe" ></i> 
+                      </a>
+                  <% } %>
+                  <% if (tile.github) { %>
+                      <a class="" href="<%- tile.github %>" >
+                        <i class="bi bi-github" ></i> 
+                      </a>
+                  <% } %>
+                  <% if (tile.twitter) { %>
+                      <a class="" href="<%- tile.twitter %>" >
+                        <i class="bi bi-twitter"></i> 
+                      </a>
+						  	  <% } %>
+                 <% if (tile.linkedin) { %> 
+                      <a class="" href="<%- tile.linkedin %>" >
+                        <i class="bi bi-linkedin"></i> 
+                      </a>
+						  	 <% } %>
+						  	 <% if (tile.facebook) { %> 
+                      <a class="" href="<%- tile.facebook %>" >
+                        <i class="bi bi-facebook"></i> 
+                      </a>
+						  	 <% } %>
+						  	 <% if (tile.mastodon) { %> 
+                      <a class="" href="<%- tile.mastodon %>" >
+                        <i class="bi bi-mastodon"></i> 
+                      </a>
+						  	 <% } %>
+						  	 </li>
+						  <% } %>
+						   </ul>
 							</p>
 							</li>
         <% } %>
